# MovieShelf

./: .gitignore  CHANGELOG.md  LICENSE  MovieBrowser.spec  README.md  app.py  config.example.json  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.bat  tsconfig.node.json  tsconfig.web.json
resources/mpv_config/: mpv.conf
resources/mpv_config/script-opts/: uosc.conf
scripts/: fetch-ffprobe.mjs  fetch-mpv.mjs  fetch-uosc.mjs
shared/: types.ts
src/main/: appSettings.ts  cache.ts  collections.ts  config.ts  fingerprint.ts  index.ts  ipc.ts  library.ts  logging.ts  matching.ts  metadata.ts  parsing.ts  paths.ts  ratings.ts  settings.ts  subtitles.ts  trailers.ts  updater.ts  view.ts
src/main/player/: fallback.ts  index.ts  mpv.ts  overlay.ts
src/main/providers/: index.ts  omdb.ts  tmdb.ts
src/movieshelf/: __init__.py  __main__.py  api.py  app.py  cache.py  config.py  fingerprint.py  library.py  logsetup.py  matching.py  metadata.py  parsing.py  player.py  settings.py  trailers.py
src/movieshelf/providers/: __init__.py  omdb.py  tmdb.py
src/movieshelf/web/: app.js  index.html  styles.css
src/preload/: index.d.ts  index.ts
src/renderer/: controls.html  index.html
src/renderer/src/: App.tsx  api.ts  controls.tsx  icons.tsx
src/renderer/src/components/: CollectionBanners.tsx  Controls.tsx  DetailModal.tsx  Grid.tsx  PlayerPane.tsx  SettingsPage.tsx  Sidebar.tsx  UpdateBanner.tsx
src/renderer/src/hooks/: useCovers.ts  useRatings.ts
tools/: generate_icon.py
(+2 files in other folders)
