[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movieshelf"
version = "2.1.2"
description = "A local movie library browser with TMDb/OMDb matching, VLC playback, and an HTML/CSS frontend."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["pywebview>=5.0", "guessit>=3.8", "pymediainfo>=6.1"]

[project.gui-scripts]
movieshelf = "movieshelf.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
movieshelf = ["web/*.html", "web/*.css", "web/*.js"]
